[package]
name = "rvlink-bridge"
authors = ["rvlink-bridge developers"]
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
rvlink-proto = { path = "../rvlink-proto" }
rvlink-common = { path = "../rvlink-common" }

# Logging
log = { version = "0.4" }
flexi_logger = { version = "0.23", features = ["use_chrono_for_offset"] }

# Utility
anyhow = { version = "1.0" }
lazy_static = { version = "1.4" }
derive_more = { version = "0.99" }
num_enum = "0.5"
uuid = "1.1"
hex-literal = "0.3"
fixed = "1.17"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
machine-uid = "0.2"
base64 = "0.13"
atomic = "0.5"
lockfree = "0.5"
crossbeam-queue = "0.3"

# CLI
clap = { version = "3.2", features = ["derive", "env"] }

# Async
tokio = { version = "1.17", features = ["full"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }

# Bluetooth
bluer = { version = "0.15", features = ["bluetoothd"] }

# MQTT
rumqttc = { version = "0.13" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
